# KNAA_grant_2020

./: .gitignore  .gitmodules
firmware/: .gitignore  CMakeLists.txt  functions.cmake
firmware/core/: CMakeLists.txt  HAL.hpp  I2C.hpp  Stream.h  Stream.hpp  UART.hpp
firmware/core/TMC/: CMakeLists.txt  SERIAL_SWITCH.h  TMC2130_bitfields.h  TMC2208Stepper.cpp  TMC2208Stepper.h  TMC2208_bitfields.h  TMC2209Stepper.cpp  TMC2209Stepper.h  TMCStepper.cpp  TMCStepper.h
firmware/core/TMCStepper/: CMakeLists.txt  TMCStepper.h
firmware/core/TMCStepper/source/: SERIAL_SWITCH.cpp  SERIAL_SWITCH.h  SW_SPI.h  TMC2208Stepper.cpp
firmware/core/VL53L0X/: CMakeLists.txt  VL53L0X.cpp  VL53L0X.h
hardware/Assembly/: Assembly.MbsDoc  Assembly.PrjMbd  Assembly.PrjMbdStructure  Assembly1.MbaDoc
hardware/LIFT_CARD/: LIFT_CARD.Annotation  LIFT_CARD.OutJob  LIFT_CARD.PcbDoc  LIFT_CARD.PrjPcb  LIFT_CARD.PrjPcbStructure  LIFT_CARD.SchDoc  RS485_FD.SchDoc
hardware/LIFT_DRIVER/: Chineesium.OutJob  LD39050PU33R.SchDoc  LIFT_DRIVER.IntLib  LIFT_DRIVER.PrjPcb  LIFT_DRIVER.PrjPcbStructure  LIFT_DRIVER.SchDoc  TMC2209.SchDoc  protection.SchDoc
hardware/MAIN/: ENC28J60.SchDoc  LM2596.SchDoc  MAIN.Annotation  MAIN.PcbDoc  MAIN.PrjPcb  MAIN.PrjPcbStructure  MAIN.SchDoc  RS485_FD.SchDoc  STEPPER_MOTOR.Harness  STEPPER_MOTOR.SchDoc  STM32F103.SchDoc  TMC2209.Harness  TMC2209.SchDoc  VL53L0X.SchDoc  protection.SchDoc
hardware/STEPPER_CONNECTOR/: PCB.PcbDoc  RS485_FD.SchDoc  STEPPER_CONNECTOR.PrjPcb  STEPPER_CONNECTOR_gerber.rar  top.SchDoc
hardware/STEPPER_DRIVER/: Chineesium.OutJob  (+7 more)
(+107 files in other folders)
